# FUB_API

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  DATA_RULES.md  Dockerfile  HANDOFF.md  MCP_SERVER_GUIDE.md  README.md  docker-compose.demo.yml  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
dashboard/: _brand.py  _db.py  app.py
dashboard/pages/: 0_Overview.py  1_Funnel.py  2_Agents.py  3_Deals.py  3_Pipeline.py  4_CrossSystem.py  5_Activity.py  8_Account.py  9_Settings.py
demo/: seed_demo.py
launchd/: com.dcr.fub-refresh.plist
postgres/: .env.example  README.md  _pg.py  generate_pg_ddl.py  load_to_pg.py
postgres/sql/: create_tables.sql
scripts/: audit_csv.py  build_stages.py  check_integrity.py  derive_dims.py  draft_reply_poc.py  export.py  export_people_poc.py  export_skiptrace_csv.py  generate_ddl.py  load_to_sql.py  manifest.py  mine_sms_threads.py  niche_smoke.py  niche_to_fub_test.py  push_all_to_fub.py  push_niche_to_fub.py  push_rprd_to_fub.py  reconcile_ledger.py  refresh_daily.py  run_all.py  run_fub_push.ps1  run_fub_refresh.ps1  smoke_test.py  verify_sql_connection.py
sql/: create_tables.sql  load_bulk_insert.sql  staging_tables.sql
sql/analytics/: vw_Activity.sql  vw_AgentLeaderboard.sql  vw_AllContacts.sql  vw_LeadFunnel.sql  vw_Opportunities.sql
sql/views/: vw_AgentLeaderboard.sql  vw_DailyLeadFunnel.sql  vw_DealsByStage.sql
src/: _tls_bootstrap.py
src/fub_api/: __init__.py  alerts.py  auth.py  (+8 more)
tests/: test_integrity.py  test_load.py  test_mcp.py  test_push_filter.py  test_sanitize.py  test_schema.py
(+37 files in other folders)
