[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fub-api"
version = "0.0.1"
description = "Python client for the Follow Up Boss API"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "vjpovlitz" }]
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
    "pyodbc>=5.1",
    # Windows dev box runs Norton, which MITMs TLS with a private root CA that
    # certifi doesn't trust. truststore routes verification through the OS store
    # (which trusts it). No-op elsewhere. See src/_tls_bootstrap.py.
    "truststore>=0.9; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
]
dashboard = [
    "streamlit>=1.36",
    "pandas>=2.2",
    "plotly>=5.22",
]
mcp = [
    "mcp[cli]>=1.0",
]

[project.scripts]
fub-mcp = "fub_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fub_api", "src/fub_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
